// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox> rendering with children should match snapshot 1`] = `
<div
  onMouseOut={[MockFunction]}
  onMouseOver={[MockFunction]}
>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <TextBody>
        Some label
      </TextBody>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children should match snapshot 1`] = `
<div
  onMouseOut={[MockFunction]}
  onMouseOver={[MockFunction]}
>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;

exports[`<Checkbox> rendering without children with \`data-*\` should match snapshot 1`] = `
<div
  data-test="foo-attribute-select-me-from-e2e"
  onMouseOut={[MockFunction]}
  onMouseOver={[MockFunction]}
>
  <label
    className="labelWrapper"
  >
    <Inline
      alignItems="center"
      scale="s"
    >
      <div
        className="checkboxWrapper"
      >
        <test-file-stub />
      </div>
      <input
        checked={false}
        className="inputWrapper"
        disabled={false}
        name="bar"
        onChange={[MockFunction]}
        type="checkbox"
        value="foo"
      />
    </Inline>
  </label>
</div>
`;
